--- a/paper/tex/sub-questions/What_is_considered_a_FSP_based_design.tex
+++ b/paper/tex/sub-questions/What_is_considered_a_FSP_based_design.tex
@@ -1,12 +1,10 @@
-\hypertarget{research}{%
-\chapter{Research}\label{research}}
-
 \hypertarget{what-is-the-concurrent-system-architecture-that-will-be-used-in-this-paper}{%
 \section{What is the concurrent system architecture that will be used in
 this
 paper}\label{what-is-the-concurrent-system-architecture-that-will-be-used-in-this-paper}}
 
-This paper assumes the reader is familiar with Concurrency, LTS and FSP.
+This paper assumes the reader is familiar with Concurrency, LTS, LTSA
+and FSP.
 
 In this paper two implementations of a finite-state machine will be
 used:
@@ -19,7 +17,7 @@ used:
   Thread, making decisions about the system
 \end{itemize}
 
-They both follow from a LTS design, however they differ in their way of
+They both follow from a FSP design, however they differ in their way of
 making transitions.
 
 When a Thread makes a transition the following steps are taken:
@@ -29,25 +27,25 @@ When a Thread makes a transition the following steps are taken:
 \item
   Execute an action
 \item
-  Changing the current state according to the LTS design
+  Changing the current state according to the FSP design
 \item
-  Setting its sensitivity-list according to the LTS design and the
+  Setting its sensitivity-list according to the FSP design and the
   current state
 \end{itemize}
 
 When a device-driver makes a transition the slightly differ, this is
 because the device-driver communicates with external devices and based
 upon these external devices in combination with its current state and
-and LTS design will it determine its sensitivity-list. The steps are:
+FSP design will it determine its sensitivity-list. The steps are:
 
 \begin{itemize}
 \tightlist
 \item
   Execute an action
 \item
-  Change the current state according to the LTS design
+  Change the current state according to the FSP design
 \item
-  Setting its sensitivity-list according to the external devices, LTS
+  Setting its sensitivity-list according to the external devices, FSP
   design and the current state
 \end{itemize}
 
@@ -60,16 +58,10 @@ execute this action.
 The described elements are shown in the following diagram, this diagram
 represents the concurrent system architecture.
 
-\begin{figure}
-\centering
-\includegraphics{../img/system_architecture.png}
-\caption{System architecture}
-\end{figure}
+\includegraphics{../img/system_architecture.png} //Add reference
 
 In the top of the diagram are the threads shown, they are represented by
-FSP models. At the bottom of the diagram the device-drivers are shown,
-in this diagram it is not clear that they are represented by FSP models,
-however in this paper they are.
+FSP models. At the bottom of the diagram the device-drivers are shown.
 
 At the center of the diagram is the synchronization-server shown, it
 allows communication between device-drivers and threads.
