--- a/paper/tex/implementation/How_will_a_synchronization-server_be_build.tex
+++ b/paper/tex/implementation/How_will_a_synchronization-server_be_build.tex
@@ -1,6 +1,3 @@
-\hypertarget{implementation}{%
-\chapter{Implementation}\label{implementation}}
-
 \hypertarget{how-will-a-synchronization-server-be-build}{%
 \section{How will a synchronization-server be
 build}\label{how-will-a-synchronization-server-be-build}}
@@ -16,23 +13,21 @@ machines}\label{how-will-the-synchronization-server-save-the-data-of-the-finite-
 For storing the finite-state machine and finite-state machine derivative
 and their attributes structs will be used:
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{typedef} \KeywordTok{struct}
-\NormalTok{\{}
-    \DataTypeTok{int}\NormalTok{ sensitivity_list[ACTIONS];}
-    \DataTypeTok{int}\NormalTok{ alphabet[ACTIONS];}
-    \DataTypeTok{int}\NormalTok{ endpoint;}
-    \DataTypeTok{int}\NormalTok{ index;}
-\NormalTok{\} finite_state_machine_node_derivative_t;}
+\begin{verbatim}
+typedef struct
+{
+    int sensitivity_list[ACTIONS];
+    int alphabet[ACTIONS];
+    int endpoint;
+    int index;
+} finite_state_machine_node_derivative_t;
 
-\KeywordTok{typedef} \KeywordTok{struct}
-\NormalTok{\{}
-    \DataTypeTok{int}\NormalTok{ endpoint;}
-\NormalTok{    finite_state_machine_node_derivative_t *derivatives[DERIVATIVES];}
-\NormalTok{\} synchronization_server_t;}
-\end{Highlighting}
-\end{Shaded}
+typedef struct
+{
+    int endpoint;
+    finite_state_machine_node_derivative_t *derivatives[DERIVATIVES];
+} synchronization_server_t;
+\end{verbatim}
 
 \hypertarget{how-will-the-synchronization-server-determine-the-next-action-for-the-finite-state-machines}{%
 \subsection{How will the synchronization-server determine the next
@@ -42,87 +37,85 @@ machines}\label{how-will-the-synchronization-server-determine-the-next-action-fo
 For determining the next action that the finite-state machines will
 execute, the following code snippet is used:
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\DataTypeTok{int}\NormalTok{ next_action(}
-\NormalTok{    synchronization_server_t *self)}
-\NormalTok{\{}
+\begin{verbatim}
+int next_action(
+    synchronization_server_t *self)
+{
 
-    \DataTypeTok{int}\NormalTok{ actions[ACTIONS] = \{NO_ACTION\};}
+    int actions[ACTIONS] = {NO_ACTION};
 
-\NormalTok{    get_combined_actions(self, actions);}
+    get_combined_actions(self, actions);
 
-\NormalTok{    get_valid_actions(self, actions);}
+    get_valid_actions(self, actions);
 
-    \ControlFlowTok{return}\NormalTok{ random_action_from_actions(actions);}
-\NormalTok{\}}
+    return random_action_from_actions(actions);
+}
 
-\DataTypeTok{void}\NormalTok{ get_valid_actions(}
-\NormalTok{    synchronization_server_t *self,}
-    \DataTypeTok{int}\NormalTok{ actions[ACTIONS])}
-\NormalTok{\{}
-    \DataTypeTok{int}\NormalTok{ a = }\DecValTok{0}\NormalTok{, d = }\DecValTok{0}\NormalTok{;}
+void get_valid_actions(
+    synchronization_server_t *self,
+    int actions[ACTIONS])
+{
+    int a = 0, d = 0;
 
-    \DataTypeTok{int}\NormalTok{ actions_to_remove[ACTIONS] = \{HAS_ACTION\};}
+    int actions_to_remove[ACTIONS] = {HAS_ACTION};
 
-    \ControlFlowTok{for}\NormalTok{ (a = }\DecValTok{0}\NormalTok{; a < ACTIONS; a++)}
-\NormalTok{    \{}
-        \ControlFlowTok{for}\NormalTok{ (d = }\DecValTok{0}\NormalTok{; d < DERIVATIVES; d++)}
-\NormalTok{        \{}
-            \ControlFlowTok{if}\NormalTok{ (self->derivatives[d]->alphabet[a] != NO_ACTION &&}
-\NormalTok{                self->derivatives[d]->sensitivity_list[a] == NO_ACTION)}
-\NormalTok{            \{}
-\NormalTok{                actions_to_remove[a] = NO_ACTION;}
-\NormalTok{            \}}
-\NormalTok{        \}}
-\NormalTok{    \}}
+    for (a = 0; a < ACTIONS; a++)
+    {
+        for (d = 0; d < DERIVATIVES; d++)
+        {
+            if (self->derivatives[d]->alphabet[a] != NO_ACTION &&
+                self->derivatives[d]->sensitivity_list[a] == NO_ACTION)
+            {
+                actions_to_remove[a] = NO_ACTION;
+            }
+        }
+    }
 
-    \ControlFlowTok{for}\NormalTok{ (a = }\DecValTok{0}\NormalTok{; a < ACTIONS; a++)}
-\NormalTok{    \{}
-        \ControlFlowTok{if}\NormalTok{ (actions_to_remove[a] == NO_ACTION)}
-\NormalTok{        \{}
-\NormalTok{            actions[a] = NO_ACTION;}
-\NormalTok{        \}}
-\NormalTok{    \}}
-\NormalTok{\}}
+    for (a = 0; a < ACTIONS; a++)
+    {
+        if (actions_to_remove[a] == NO_ACTION)
+        {
+            actions[a] = NO_ACTION;
+        }
+    }
+}
 
-\DataTypeTok{void}\NormalTok{ get_combined_actions(}
-\NormalTok{    synchronization_server_t *self,}
-    \DataTypeTok{int}\NormalTok{ combined_actions[ACTIONS])}
-\NormalTok{\{}
-    \DataTypeTok{int}\NormalTok{ d = }\DecValTok{0}\NormalTok{, a = }\DecValTok{0}\NormalTok{;}
+void get_combined_actions(
+    synchronization_server_t *self,
+    int combined_actions[ACTIONS])
+{
+    int d = 0, a = 0;
 
-    \ControlFlowTok{for}\NormalTok{ (d = }\DecValTok{0}\NormalTok{; d < DERIVATIVES; d++)}
-\NormalTok{    \{}
-        \ControlFlowTok{for}\NormalTok{ (a = }\DecValTok{0}\NormalTok{; a < ACTIONS; a++)}
-\NormalTok{        \{}
-            \ControlFlowTok{if}\NormalTok{ (self->derivatives[d]->sensitivity_list[a] != NO_ACTION &&}
-\NormalTok{                combined_actions[a] == NO_ACTION)}
-\NormalTok{            \{}
-\NormalTok{                combined_actions[a] = HAS_ACTION;}
-\NormalTok{            \}}
-\NormalTok{        \}}
-\NormalTok{    \}}
-\NormalTok{\}}
+    for (d = 0; d < DERIVATIVES; d++)
+    {
+        for (a = 0; a < ACTIONS; a++)
+        {
+            if (self->derivatives[d]->sensitivity_list[a] != NO_ACTION &&
+                combined_actions[a] == NO_ACTION)
+            {
+                combined_actions[a] = HAS_ACTION;
+            }
+        }
+    }
+}
 
-\DataTypeTok{int}\NormalTok{ random_action_from_actions(}
-    \DataTypeTok{int}\NormalTok{ actions[ACTIONS])}
-\NormalTok{\{}
-    \DataTypeTok{int}\NormalTok{ i = }\DecValTok{0}\NormalTok{, selected_action = NO_ACTION;}
+int random_action_from_actions(
+    int actions[ACTIONS])
+{
+    int i = 0, selected_action = NO_ACTION;
 
-    \ControlFlowTok{for}\NormalTok{ (i = rand(); i < ACTIONS; i++)}
-\NormalTok{    \{}
-        \ControlFlowTok{if}\NormalTok{ (actions[i] != NO_ACTION)}
-\NormalTok{        \{}
-\NormalTok{            selected_action = i;}
-            \ControlFlowTok{break}\NormalTok{;}
-\NormalTok{        \}}
-\NormalTok{    \}}
+    for (i = rand(); i < ACTIONS; i++)
+    {
+        if (actions[i] != NO_ACTION)
+        {
+            selected_action = i;
+            break;
+        }
+    }
 
-    \ControlFlowTok{return}\NormalTok{ selected_action == NO_ACTION ? random_action_from_actions(actions) : selected_action;}
-\NormalTok{\}}
-\end{Highlighting}
-\end{Shaded}
+    return selected_action == NO_ACTION ? random_action_from_actions(actions) : selected_action;
+}
+\end{verbatim}
 
 In \emph{get\_combined\_actions} an array of all the actions is
 determined. In \emph{get\_valid\_actions} the actions that are able to
@@ -138,26 +131,24 @@ action}\label{how-will-the-synchronization-server-determine-the-finite-state-mac
 For determining the derivatives that will execute an action the
 following code snippet is used:
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\DataTypeTok{void}\NormalTok{ get_executable_derivatives(}
-\NormalTok{    synchronization_server_t *self,}
-    \DataTypeTok{int}\NormalTok{ derivatives[DERIVATIVES],}
-    \DataTypeTok{int}\NormalTok{ action)}
-\NormalTok{\{}
-    \DataTypeTok{int}\NormalTok{ d = }\DecValTok{0}\NormalTok{;}
+\begin{verbatim}
+void get_executable_derivatives(
+    synchronization_server_t *self,
+    int derivatives[DERIVATIVES],
+    int action)
+{
+    int d = 0;
 
-    \ControlFlowTok{for}\NormalTok{ (d = }\DecValTok{0}\NormalTok{; d < DERIVATIVES; d++)}
-\NormalTok{    \{}
-        \ControlFlowTok{if}\NormalTok{ (self->derivatives[d]->alphabet[action] != NO_ACTION &&}
-\NormalTok{            self->derivatives[d]->sensitivity_list[action] != NO_ACTION)}
-\NormalTok{        \{}
-\NormalTok{            derivatives[action] = HAS_ACTION;}
-\NormalTok{        \}}
-\NormalTok{    \}}
-\NormalTok{\}}
-\end{Highlighting}
-\end{Shaded}
+    for (d = 0; d < DERIVATIVES; d++)
+    {
+        if (self->derivatives[d]->alphabet[action] != NO_ACTION &&
+            self->derivatives[d]->sensitivity_list[action] != NO_ACTION)
+        {
+            derivatives[action] = HAS_ACTION;
+        }
+    }
+}
+\end{verbatim}
 
 The array of derivatives is iterated and only the derivatives that have
 the action in their alphabet and sensitivity\_list will execute the
