--- a/paper/tex/researchquestions.tex
+++ b/paper/tex/researchquestions.tex
@@ -14,7 +14,7 @@ server. This leads to the following research question:
 \tightlist
 \item
   How can a synchronization server be build that synchronizes an
-  unbeknownst number of threads, where every thread is based on a
+  unbeknownst number of threads, where every thread is based on a FSP
   design.
 \end{itemize}
 
@@ -24,9 +24,9 @@ server. This leads to the following research question:
 This research question is divided into sub-questions:
 
 \begin{itemize}
-\tightlist
 \item
-  What different FSP elements will be used in this paper?
+  What is the concurrent system architecture that will be used in this
+  paper?
 \item
   How will the communication between processes take place under Minix?
 
@@ -110,20 +110,29 @@ This research question is divided into sub-questions:
   \begin{itemize}
   \tightlist
   \item
-    How will a finite-state machine send their status to the
-    synchronization-server?
+    What is a finite-state machine status and how will it be
+    communicated with the synchronization-server?
+
+    \begin{itemize}
+    \tightlist
+    \item
+      What is a finite-state machine status and how will it be stored?
+    \item
+      How will a finite-state machine status be communicated with the
+      synchronization-server?
+    \end{itemize}
   \item
-    How will the synchronization-server send an action to a finite-state
-    machine?
+    How will the synchronization-server communicate actions to the
+    finite-state machines?
   \end{itemize}
 \item
-  What will be the functionality of the device-drivers be implemented?
+  How will the functionality of the device-drivers be implemented?
 
   \begin{itemize}
   \tightlist
   \item
-    How can the functionality of device-driver0 be implemented?
+    How will the functionality of device-driver0 be implemented?
   \item
-    How can the functionality of device-driver1 be implemented?
+    How will the functionality of device-driver1 be implemented?
   \end{itemize}
 \end{itemize}
